--- a/assets/css/_blog-single.scss
+++ b/assets/css/_blog-single.scss
@@ -50,7 +50,7 @@
     }
     .single-blog-info-header{
       background-color: $toro_red;
-      height: 100%;
+      min-height: 100%;
       width: 100%;
       padding: 40px 10%;
       display: flex;
@@ -58,6 +58,7 @@
       justify-content: space-between;
       @media (max-width: 985px){
         height: auto;
+        padding: 40px 32px;
       }
       span{
         font-size: 18px;
@@ -185,6 +186,7 @@
           font-size: 34px;
           transition: ease 300ms all;
           opacity: 0;
+          text-align: center;
         }
 
         img{
@@ -195,7 +197,7 @@
           position: absolute;
           left: 0;
           top: 0;
-          
+
         }
 
 
