--- a/assets/css/_blog-single.scss
+++ b/assets/css/_blog-single.scss
@@ -248,7 +248,7 @@
     align-items: center;
     border: 2px solid white;
     padding: 5px;
-    a{
+    div{
       margin: 10px 25px;
     }
     img{
@@ -358,7 +358,7 @@
       width: auto;
 
     }
-    a{
+    div{
       margin-right: 24px;
       &:last-child{
         margin-right: 0px;
