--- a/templates/boxes/news_item.html
+++ b/templates/boxes/news_item.html
@@ -1,5 +1,9 @@
 {% include "header.html" %}
 
+
+<div id="fb-root"></div>
+<script async defer src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.2"></script>
+
 <!-- single blog<br> -->
 
 <article class="single-blog">
@@ -9,9 +13,19 @@
       <h6>{{current.name}}</h6>
       <span>Share Article: </span>
       <div class="single-blog-social-container">
-        <a href="" class='social-fb'><img src="{{ static('img/Facebook_gray.png') }}" alt="Facebook Icon"></a>
-        <a href="" class='social-twitter'><img src="{{ static('img/Twitter_gray.png') }}" alt="Twitter Icon"></a>
-        <a href="" class='social-email'><img src="{{ static('img/Email_gray.png') }}" alt="Email Icon"></a>
+        <div class='social-fb fb-share-button' data-href="{{current.request.absolute_url}}" data-layout="button_count">
+          <a href="https://www.facebook.com/sharer/sharer.php?u={{current.request.absolute_url|urlencode}};src=sdkpreparse" target="_blank">
+            <img src="{{ static('img/Facebook_gray.png') }}" class='fb-xfbml-parse-ignore' alt="Facebook Icon" />
+          </a>
+        </div>
+
+        <div class="social-twitter">
+          <a href=""><img src="{{ static('img/Twitter_gray.png') }}" alt="Twitter Icon"></a>
+        </div>
+
+        <div class="social-email">
+          <a href=""><img src="{{ static('img/Email_gray.png') }}" alt="Email Icon"></a>
+        </div>
       </div>
     </div>
   </div>
@@ -25,9 +39,19 @@
       </div>
       <div class="single-blog-social">
         <div class="single-blog-social-container">
-          <a href="" class='social-fb'><img src="{{ static('img/Facebook.png') }}" alt="Facebook Icon"></a>
-          <a href="" class='social-twitter'><img src="{{ static('img/Twitter.png') }}" alt="Twitter Icon"></a>
-          <a href="" class='social-email'><img src="{{ static('img/Email.png') }}" alt="Email Icon"></a>
+          <div class='social-fb fb-share-button' data-href="{{current.request.absolute_url}}" data-layout="button_count">
+            <a href="https://www.facebook.com/sharer/sharer.php?u={{current.request.absolute_url|urlencode}};src=sdkpreparse" target="_blank">
+              <img src="{{ static('img/Facebook.png') }}" class='fb-xfbml-parse-ignore' alt="Facebook Icon" />
+            </a>
+          </div>
+
+          <div class="social-twitter">
+            <a href=""><img src="{{ static('img/Twitter.png') }}" alt="Twitter Icon"></a>
+          </div>
+
+          <div class="social-email">
+            <a href=""><img src="{{ static('img/Email.png') }}" alt="Email Icon"></a>
+          </div>
         </div>
         <div class="single-blog-scroll">
           <span>Scroll</span>
