--- a/templates/boxes/event.html
+++ b/templates/boxes/event.html
@@ -7,9 +7,22 @@
       <h6>{{current.name}}</h6>
       <span>Share Article: </span>
       <div class="single-blog-social-container">
-        <a href="" class='social-fb'><img src="{{ static('img/Facebook_gray.png') }}" alt="Facebook Icon"></a>
-        <a href="" class='social-twitter'><img src="{{ static('img/Twitter_gray.png') }}" alt="Twitter Icon"></a>
-        <a href="" class='social-email'><img src="{{ static('img/Email_gray.png') }}" alt="Email Icon"></a>
+        <div class='social-fb fb-share-button' data-href="{{current.request.absolute_url}}" data-layout="button_count">
+          <a href="https://www.facebook.com/sharer/sharer.php?u={{current.request.absolute_url|urlencode}};src=sdkpreparse" target="_blank">
+            <img src="{{ static('img/Facebook_gray.png') }}" class='fb-xfbml-parse-ignore' alt="Facebook Icon" />
+          </a>
+        </div>
+
+        <div class="social-twitter">
+
+          <a target="_blank" rel="nofollow" href="https://twitter.com/intent/tweet?url={{current.request.absolute_url|urlencode}}" onclick="window.open('https://twitter.com/intent/tweet?url={{current.request.absolute_url|urlencode}}'&text={{current.title.absolute_url|urlencode}},width=700,height=500,toolbar=0,menubar=0,location=0,status=1,scrollbars=1,resizable=1,left=0,top=0');return false;" title="Tweet this!" class='twitter-share-button'>
+            <img src="{{ static('img/Twitter_gray.png') }}" alt="Twitter Icon">
+          </a>
+        </div>
+
+        <div class="social-email">
+          <a href="mailto:?&body={{current.request.absolute_url}}"><img src="{{ static('img/Email_gray.png') }}" alt="Email Icon"></a>
+        </div>
       </div>
     </div>
   </div>
@@ -26,9 +39,22 @@
       </div>
       <div class="single-blog-social">
         <div class="single-blog-social-container">
-          <a href="" class='social-fb'><img src="{{ static('img/Facebook.png') }}" alt="Facebook Icon"></a>
-          <a href="" class='social-twitter'><img src="{{ static('img/Twitter.png') }}" alt="Twitter Icon"></a>
-          <a href="" class='social-email'><img src="{{ static('img/Email.png') }}" alt="Email Icon"></a>
+          <div class='social-fb fb-share-button' data-href="{{current.request.absolute_url}}" data-layout="button_count">
+            <a href="https://www.facebook.com/sharer/sharer.php?u={{current.request.absolute_url|urlencode}};src=sdkpreparse" target="_blank">
+              <img src="{{ static('img/Facebook.png') }}" class='fb-xfbml-parse-ignore' alt="Facebook Icon" />
+            </a>
+          </div>
+
+          <div class="social-twitter">
+            <a target="_blank" rel="nofollow" href="https://twitter.com/intent/tweet?url={{current.request.absolute_url|urlencode}}" onclick="window.open('https://twitter.com/intent/tweet?url={{current.request.absolute_url|urlencode}}'&text={{current.title.absolute_url|urlencode}},width=700,height=500,toolbar=0,menubar=0,location=0,status=1,scrollbars=1,resizable=1,left=0,top=0');return false;" title="Tweet this!" class='twitter-share-button'>
+              <img src="{{ static('img/Twitter.png') }}" alt="Twitter Icon">
+            </a>
+          </div>
+
+
+          <div class="social-email">
+            <a href="mailto:?&body={{current.request.absolute_url}}"><img src="{{ static('img/Email.png') }}" alt="Email Icon"></a>
+          </div>
         </div>
         <div class="single-blog-scroll">
           <span>Scroll</span>
