--- a/templates/boxes/news_item.html
+++ b/templates/boxes/news_item.html
@@ -4,6 +4,7 @@
 <div id="fb-root"></div>
 <script async defer src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.2"></script>
 
+
 <!-- single blog<br> -->
 
 <article class="single-blog">
@@ -20,11 +21,14 @@
         </div>
 
         <div class="social-twitter">
-          <a href=""><img src="{{ static('img/Twitter_gray.png') }}" alt="Twitter Icon"></a>
+
+          <a target="_blank" rel="nofollow" href="https://twitter.com/intent/tweet?url={{current.request.absolute_url|urlencode}}" onclick="window.open('https://twitter.com/intent/tweet?url={{current.request.absolute_url|urlencode}}'&text={{current.title.absolute_url|urlencode}},width=700,height=500,toolbar=0,menubar=0,location=0,status=1,scrollbars=1,resizable=1,left=0,top=0');return false;" title="Tweet this!" class='twitter-share-button'>
+            <img src="{{ static('img/Twitter_gray.png') }}" alt="Twitter Icon">
+          </a>
         </div>
 
         <div class="social-email">
-          <a href=""><img src="{{ static('img/Email_gray.png') }}" alt="Email Icon"></a>
+          <a href="mailto:?&body={{current.request.absolute_url}}"><img src="{{ static('img/Email_gray.png') }}" alt="Email Icon"></a>
         </div>
       </div>
     </div>
@@ -46,11 +50,14 @@
           </div>
 
           <div class="social-twitter">
-            <a href=""><img src="{{ static('img/Twitter.png') }}" alt="Twitter Icon"></a>
+            <a target="_blank" rel="nofollow" href="https://twitter.com/intent/tweet?url={{current.request.absolute_url|urlencode}}" onclick="window.open('https://twitter.com/intent/tweet?url={{current.request.absolute_url|urlencode}}'&text={{current.title.absolute_url|urlencode}},width=700,height=500,toolbar=0,menubar=0,location=0,status=1,scrollbars=1,resizable=1,left=0,top=0');return false;" title="Tweet this!" class='twitter-share-button'>
+              <img src="{{ static('img/Twitter.png') }}" alt="Twitter Icon">
+            </a>
           </div>
 
+
           <div class="social-email">
-            <a href=""><img src="{{ static('img/Email.png') }}" alt="Email Icon"></a>
+            <a href="mailto:?&body={{current.request.absolute_url}}"><img src="{{ static('img/Email.png') }}" alt="Email Icon"></a>
           </div>
         </div>
         <div class="single-blog-scroll">
