facebook article type

--- a/templates/boxes/news_item.html
+++ b/templates/boxes/news_item.html
@@ -15,7 +15,7 @@
       <span>Share Article: </span>
       <div class="single-blog-social-container">
         <div class='social-fb fb-share-button' data-href="{{current.request.absolute_url}}" data-layout="button_count">
-          <a href="https://www.facebook.com/sharer/sharer.php?u={{current.request.absolute_url|urlencode}};src=sdkpreparse" target="_blank">
+          <a href="https://www.facebook.com/sharer/sharer.php?u={{current.request.absolute_url|urlencode}}" target="_blank">
             <img src="{{ static('img/Facebook_gray.png') }}" class='fb-xfbml-parse-ignore' alt="Facebook Icon" />
           </a>
         </div>
@@ -44,7 +44,7 @@
       <div class="single-blog-social">
         <div class="single-blog-social-container">
           <div class='social-fb fb-share-button' data-href="{{current.request.absolute_url}}" data-layout="button_count">
-            <a href="https://www.facebook.com/sharer/sharer.php?u={{current.request.absolute_url|urlencode}};src=sdkpreparse" target="_blank">
+            <a href="https://www.facebook.com/sharer/sharer.php?u={{current.request.absolute_url|urlencode}}" target="_blank">
               <img src="{{ static('img/Facebook.png') }}" class='fb-xfbml-parse-ignore' alt="Facebook Icon" />
             </a>
           </div>
