--- a/templates/header.html
+++ b/templates/header.html
@@ -54,7 +54,7 @@
   {% if current.fields.SEO.description %}
     <meta property="og:description"        content="{{current.fields.SEO.description}}" />
   {% endif %}
-
+  <meta property="og:type"               content="website" />
   <meta property="og:image"              content="{{current.fields.SEO.image.url}}" />
 
 </head>
