--- a/templates/header.html
+++ b/templates/header.html
@@ -36,26 +36,62 @@
   <link rel="icon" href="{{account.site.favicon}}">
 
 
-  <!-- FACEBOOK SHARE -->
+  <meta property="og:site_name" content="{{account.site.title}}">
   <meta property="og:url"                content="{{current.request.absolute_url}}" />
 
-  {% if current.meta_title %}
-    <meta property="og:title"              content="{{current.meta_title}}" />
-  {% endif %}
+
   {% if current.fields.SEO.title %}
     <meta property="og:title"              content="{{current.fields.SEO.title}}" />
+    <meta name="twitter:title" content="{{current.meta_title}}">
   {% else %}
-    <meta property="og:title"              content="{{current.name}}" />
+    {% if current.name == "Home" %}
+      <meta property="og:title"              content="{{account.site.title}}" />
+      <meta name="twitter:title" content="{{account.site.title}}">
+    {% else %}
+      <meta property="og:title"              content="{{current.name}}" />
+      <meta name="twitter:title" content="{{current.name}}">
+    {% endif %}
   {% endif %}
 
-  {% if current.meta_description %}
-    <meta property="og:description"        content="{{current.meta_description}}" />
-  {% endif %}
   {% if current.fields.SEO.description %}
     <meta property="og:description"        content="{{current.fields.SEO.description}}" />
+    <meta name="twitter:description" content="{{current.fields.SEO.description}}">
+  {% else %}
+    {% if current.box_type == "restaurant" %}
+      <meta property="og:description"        content="{{current.fields.home_description}}" />
+      <meta name="twitter:description" content="{{current.fields.home_description}}">
+    {% else %}
+      {% if current.fields.dek %}
+        <meta property="og:description"        content="{{current.fields.dek}}" />
+        <meta name="twitter:description" content="{{current.fields.dek}}">
+      {% else %}
+        <meta property="og:description"        content="{{account.site.meta_description}}" />
+        <meta name="twitter:description" content="{{account.site.meta_description}}">
+      {% endif %}
+    {% endif %}
   {% endif %}
+
   <meta property="og:type"               content="website" />
-  <meta property="og:image"              content="{{current.fields.SEO.image.url}}" />
+
+  {% if current.fields.SEO.image.url %}
+    <meta property="og:image"              content="{{current.fields.SEO.image.url}}" />
+    <meta name="twitter:image" content="{{current.fields.SEO.image.url}}">
+  {% else %}
+    <meta property="og:image"              content="{{static('img/logo.png')}}" />
+    <meta name="twitter:image" content="{{account.logo}}">
+
+  {% endif %}
+
+  {% if current.fields.SEO.keywords %}
+    <meta property="keywords"        content="{{current.fields.SEO.keywords}}" />
+  {% else %}
+    <meta property="keywords"        content="{{account.site.meta_keywords}}" />
+  {% endif %}
+
+
+  <meta name="twitter:card" content="summary_large_image">
+
+
 
 </head>
 
