--- a/templates/boxes/restaurant.html
+++ b/templates/boxes/restaurant.html
@@ -59,7 +59,7 @@
           {{current.fields.description}}
         </div>
         <div class="rest-single-map" style='border-color: {{current.fields.primary_color}}'>
-          <!-- <img src="{{current.fields.map.url}}" alt=""> -->
+          <img src="{{current.fields.map.url}}" alt="">
 
         </div>
       </div>
