--- a/assets/css/_header.scss
+++ b/assets/css/_header.scss
@@ -278,8 +278,26 @@ $desktop_mid : 900px;
     a{
       margin: 0px !important;
       padding: 12px 16px;
+      transition: ease 250ms all;
       &:after{
         display: none;
+      }
+    }
+  }
+  .nav-item.child{
+
+    @media (min-width: 1051px){
+      &:hover{
+        a{
+          background-color: white;
+          color: $toro-red !important;
+        }
+      }
+      a{
+        &:focus{
+          background: white !important;
+          color: $toro-red !important;
+        }
       }
     }
   }
