--- a/templates/boxes/kiosks.html
+++ b/templates/boxes/kiosks.html
@@ -22,13 +22,33 @@
 		  <div class='kiosk-description'>
 			  		  {{current.fields.description}}
 		  </div>
-		  <div class='kiosk-map'></div>
+		  <div class='kiosk-map'>
+        <img src="{{current.fields.map.url}}" alt="{{current.fields.map.alt}}">
+      </div>
 		  <div class='kiosk-share'>
         <h2>Share:</h2>
 
+
+        <div class='social-fb fb-share-button' data-href="{{current.request.absolute_url}}" data-layout="button_count">
+          <a href="https://www.facebook.com/sharer/sharer.php?u={{current.request.absolute_url|urlencode}}" target="_blank">
+            <img src="{{ static('img/Facebook_red.png') }}" class='fb-xfbml-parse-ignore' alt="Facebook Icon" />
+          </a>
+        </div>
+
+        <div class="social-twitter">
+
+          <a target="_blank" rel="nofollow" href="https://twitter.com/intent/tweet?url={{current.request.absolute_url|urlencode}}" onclick="window.open('https://twitter.com/intent/tweet?url={{current.request.absolute_url|urlencode}}'&text={{current.title.absolute_url|urlencode}},width=700,height=500,toolbar=0,menubar=0,location=0,status=1,scrollbars=1,resizable=1,left=0,top=0');return false;" title="Tweet this!" class='twitter-share-button'>
+            <img src="{{ static('img/Twitter_red.png') }}" alt="Twitter Icon">
+          </a>
+        </div>
+
+        <div class="social-email">
+          <a href="mailto:?&body={{current.request.absolute_url}}"><img src="{{ static('img/Email_red.png') }}" alt="Email Icon"></a>
+        </div>
+<!--
           <a href="" class='social-fb'><img src="{{ static('img/Facebook_red.png') }}" alt="Facebook Icon"></a>
           <a href="" class='social-twitter'><img src="{{ static('img/Twitter_red.png') }}" alt="Twitter Icon"></a>
-          <a href="" class='social-email'><img src="{{ static('img/Email_red.png') }}" alt="Email Icon"></a>
+          <a href="" class='social-email'><img src="{{ static('img/Email_red.png') }}" alt="Email Icon"></a> -->
 		  </div>
 
 
