--- a/templates/boxes/kiosks.html
+++ b/templates/boxes/kiosks.html
@@ -5,7 +5,9 @@
   <div class="content-margins">
     <h1 class="mobile-kiosk-title">{{current.name}}</h1>
     <div class="page-landing-header">
-      <img src="{{current.fields.thumbnail_left.url}}" alt="{{current.fields.thumbnail_left.alt_text}}">
+      <div class="kiosk-icon">
+        <img src="{{current.fields.thumbnail_left.url}}" alt="{{current.fields.thumbnail_left.alt_text}}">
+      </div>
       <h1>{{current.name}}</h1>
       <div class='kiosk_title'>
 	      <h2>{{current.fields.hover_text}}</h2>
