--- a/templates/restaurant_landing.html
+++ b/templates/restaurant_landing.html
@@ -6,9 +6,13 @@
   <div class="content-margins">
 
     <div class="page-landing-header">
-      <img src="{{static('img/restaurant-landing/Left.png')}}" alt="" class='header-icon-left'>
+      <div class="page-header-icon-left">
+        <img src="{{static('img/restaurant-landing/Left.png')}}" alt="" class='header-icon-left'>
+      </div>
       <h1>Our Restaurants</h1>
-      <img src="{{static('img/restaurant-landing/Right.png')}}" alt="" class='header-icon-right'>
+      <div class="page-header-icon-right">
+        <img src="{{static('img/restaurant-landing/Right.png')}}" alt="" class='header-icon-right'>
+      </div>
     </div>
 
 
