--- a/templates/el_blog.html
+++ b/templates/el_blog.html
@@ -8,9 +8,13 @@
     <h1 class="mobile-blog-title">El Blog</h1>
 
     <div class="page-landing-header">
-      <img src="{{static('img/el-blog-landing/Left.png')}}" alt="" class='header-icon-left'>
+      <div class="page-header-icon-left">
+        <img src="{{static('img/el-blog-landing/Left.png')}}" alt="" class='header-icon-left'>
+      </div>
       <h1>El Blog</h1>
-      <img src="{{static('img/el-blog-landing/Right.png')}}" alt="" class='header-icon-right'>
+      <div class="page-header-icon-right">
+        <img src="{{static('img/el-blog-landing/Right.png')}}" alt="" class='header-icon-right'>
+      </div>
     </div>
 
   </div>
