--- a/templates/events_landing.html
+++ b/templates/events_landing.html
@@ -6,9 +6,13 @@
     <h1 class="mobile-happenings-title">Happenings</h1>
 
     <div class="page-landing-header">
-      <img src="{{static('img/happenings-landing/Left.png')}}" alt="">
+      <div class="page-header-icon-left">
+        <img src="{{static('img/happenings-landing/Left.png')}}" alt="">
+      </div>
       <h1>Happenings</h1>
-      <img src="{{static('img/happenings-landing/Right.png')}}" alt="">
+      <div class="page-header-icon-right">
+        <img src="{{static('img/happenings-landing/Right.png')}}" alt="">
+      </div>
     </div>
 
   </div>
