--- a/templates/shop.html
+++ b/templates/shop.html
@@ -3,9 +3,13 @@
 <section class="shop-landing">
   <div class="content-margins">
     <div class="page-landing-header">
-      <img src="{{static('img/shop-landing/Left.png')}}" alt="" class='header-icon-left'>
+      <div class="page-header-icon-left">
+        <img src="{{static('img/shop-landing/Left.png')}}" alt="" class='header-icon-left'>
+      </div>
       <h1>Shop</h1>
-      <img src="{{static('img/shop-landing/Right.png')}}" alt="" class='header-icon-right'>
+      <div class="page-header-icon-right">
+        <img src="{{static('img/shop-landing/Right.png')}}" alt="" class='header-icon-right'>
+      </div>
     </div>
 
   </div>
