--- a/templates/shop.html
+++ b/templates/shop.html
@@ -30,7 +30,7 @@
       <article class="kiosk-box">
           <a href="{{shop.url}}">
             <div class="kiosk-box-img">
-              <img src="{{shop.fields.thumnail_left.url}}" alt="{{shop.fields.thumnail_left.alt_text}}">
+              <img src="{{shop.fields.thumbnail_left.url}}" alt="{{shop.fields.thumbnail_left.alt_text}}">
               <h4>{{shop.fields.hover_text}}</h4>
             </div>
             <h6>{{shop.name}}</h6>
