--- a/assets/css/_main.scss
+++ b/assets/css/_main.scss
@@ -141,7 +141,7 @@ a{
   }
 
   h2{
-	  color:black;
+	  color:$mid_grey;
 	   font-family: $knockout-lite;
 	       font-size: 6em;
 	       line-height: .8em;
