--- a/assets/css/_the_mercado.scss
+++ b/assets/css/_the_mercado.scss
@@ -184,3 +184,12 @@
     }
   }
 }
+
+.mls-mercado-map-img{
+  margin-bottom: 30px;
+  img{
+    // margin: auto;
+    width: 100%;
+    height: auto;
+  }
+}
