--- a/templates/boxes/news_item.html
+++ b/templates/boxes/news_item.html
@@ -81,7 +81,7 @@
         <a href="{{boxes.kiosks.all[0].url}}">
           <h6>Kiosks</h6>
           <div class="hay-mas-link-icon">
-            <img src="{{boxes.kiosks.all[0].fields.thumbnail_left.url}}" alt="{{boxes.kiosks.all[0].fields.thumbnail_left.alt}}">
+            <img src="{{boxes.kiosks.all[0].fields.global_icon.url}}" alt="{{boxes.kiosks.all[0].fields.global_icon.alt}}">
             <span>{{boxes.kiosks.all[0].fields.hover_text}}</span>
           </div>
           <h4>{{boxes.kiosks.all[0].name}}</h4>
