--- a/templates/newsletter_popup.html
+++ b/templates/newsletter_popup.html
@@ -31,7 +31,7 @@
        </form>
     </div>
     <div class="newsletter-success-msg">
-      <h3>Thanks for signing up!</h3>
+      <h3>¡Gracias y hasta pronto!</h3>
     </div>
   </div>
 </aside>
