--- a/templates/boxes/kiosks.html
+++ b/templates/boxes/kiosks.html
@@ -96,7 +96,7 @@
 </section>
 
 
-<section class="hay-mas">
+<!-- <section class="hay-mas">
   <div class="content-margins">
     <div class="hay-mas-header">
       <h6>¡Hay Más!</h6><span>Check out everything the Mercado has to offer.</span>
@@ -106,7 +106,7 @@
         <a href="{{boxes.kiosks.all[0].url}}">
           <h6>Kiosks</h6>
           <div class="hay-mas-link-icon">
-            <img src="{{boxes.kiosks.all[0].fields.thumbnail_left.url}}" alt="{{boxes.kiosks.all[0].fields.thumbnail_left.alt_text}}">
+            <img src="{{boxes.kiosks.all[0].fields.global_icon.url}}" alt="{{boxes.kiosks.all[0].fields.global_icon.alt_text}}">
             <span>{{boxes.kiosks.all[0].fields.hover_text}}</span>
           </div>
           <h4>{{boxes.kiosks.all[0].name}}</h4>
@@ -148,7 +148,7 @@
     </div>
   </div>
 </section>
-
+ -->
 
 
 
