--- a/templates/the_mercado.html
+++ b/templates/the_mercado.html
@@ -14,6 +14,13 @@
   </div>
 </section>
 
+<section class="mls-mercado-map-img">
+  <div class="content-margins">
+    <a href="{{static('img/mls-map.png')}}" target="_blank"><img src="{{static('img/mls-map.png')}}" alt="Little Spain Map"></a>
+  </div>
+</section>
+
+
 {% if current.name == "Bars" %}
 <section class="mercado-bars">
   <div class="content-margins">
@@ -58,7 +65,7 @@
         <article class="kiosk-box">
           <a href="{{kiosk.url}}">
             <div class="kiosk-box-img">
-              <img src="{{kiosk.fields.thumbnail_left.url}}" alt="{{kiosk.fields.thumbnail_left.alt_text}}">
+              <img src="{{kiosk.fields.global_icon.url}}" alt="{{kiosk.fields.global_icon.alt_text}}">
               <div class="kiosk-bar-hover-img">
                 <img src="{{kiosk.fields.gallery[0].image_url}}" alt="">
                 <div class="img-fade"></div>
