--- a/templates/index.html
+++ b/templates/index.html
@@ -316,7 +316,7 @@
           </a>
         </article>
 
-        <article class="kiosk-box">
+        <!-- <article class="kiosk-box">
           <a href="/shop/#shop-online">
             <div class="kiosk-box-img kiosk-bordered-img">
               <img src="{{pages.by_slug.shop.fields['online-products'].products[0].image.url}}" alt="{{pages.by_slug.shop.fields['online-products'].products[0].image.alt_text}}">
@@ -324,9 +324,9 @@
             </div>
             <h6>Shop Online</h6>
           </a>
-        </article>
+        </article> -->
 
-        <article class="kiosk-box">
+        <article class="kiosk-box home-gift-card">
           <a href="/shop/#gift-cards">
             <div class="gift-card-img">
               <div class="gift-card-img-text">
@@ -346,7 +346,7 @@
   </div>
 </section>
 
-<section class="home-el-blog">
+<!-- <section class="home-el-blog">
   <div class="content-margins">
     <div class="section-title-container">
       <img src="{{ static('img/yellow_triangle.png')}}" alt="">
@@ -388,7 +388,7 @@
       <a href="{{pages.by_slug['blog'].url}}" class='more-info'>View All</a>
     </div>
   </div>
-</section>
+</section> -->
 
 <section class="ig-feed">
   <div class="content-margins">
