--- a/templates/restaurant_landing.html
+++ b/templates/restaurant_landing.html
@@ -33,7 +33,12 @@
 
             <div class="rest-landing-rest-info-buttons">
               <a href="{{rest.url}}" class="rest-landing-learn-more more-info">Learn More</a>
-              <a href="" class="rest-landing-reserve more-info">Reserve</a>
+              {% if reservation_link %}
+                <a href="" class="rest-landing-reserve more-info">Reserve</a>
+              {% else %}
+                <a class="rest-landing-reserve more-info coming-soon">¡Coming soon!</a>
+              {% endif %}
+
             </div>
 
           </div>
