--- a/assets/css/_full-width-header.scss
+++ b/assets/css/_full-width-header.scss
@@ -37,6 +37,9 @@
         text-transform: uppercase;
         line-height: 1em;
       }
+      a{
+        text-decoration: underline;
+      }
     }
   }
   .full-width-header-img{
