--- a/templates/newsletter_popup.html
+++ b/templates/newsletter_popup.html
@@ -13,7 +13,7 @@
       </p>
 
 
-      <form action="https://app.e2ma.net/app2/audience/signup/1873742/1887124/?r=signup" id="signup" method="post" name="signup" class="newsletter-capture-form">
+      <!-- <form action="https://app.e2ma.net/app2/audience/signup/1873742/1887124/?r=signup" id="signup" method="post" name="signup" class="newsletter-capture-form">
         <input id="id_prev_member_email" name="prev_member_email" type="hidden">
         <input id="id_source" name="source" type="hidden">
         <input name="prev_member_email" type="hidden" value="">
@@ -28,7 +28,11 @@
         <div class="form-button">
          <input id="form-submit-input" name="Submit" type="submit" value="Submit" class='outline-button inverted'>
         </div>
-       </form>
+       </form> -->
+
+      {% include 'form.html' %}
+
+
     </div>
     <div class="newsletter-success-msg">
       <h3>¡Gracias y hasta pronto!</h3>
