--- a/assets/css/_newsletter-popup.scss
+++ b/assets/css/_newsletter-popup.scss
@@ -4,7 +4,7 @@
   left: 0;
   bottom: 0;
   width: 100%;
-  padding: 68px 0;
+  padding: 33px 0;
   background: $toro_red;
   color: white;
   text-align: center;
@@ -33,6 +33,9 @@
       @include transform(translateY(0));
     }
   }
+  .red-input{
+    padding: 5px 24px !important;
+  }
 }
 
 #newsletter-popup-title {
@@ -41,6 +44,8 @@
   color: $oro_yellow;
   margin: 0;
   font-family: $knockout-bantam;
+  font-size: 70px;
+  line-height: 1em;
   @media screen and (max-width: $mobile_max) {
     text-transform: uppercase;
     max-width: 240px; font-size:6rem;
@@ -51,13 +56,28 @@
 #newsletter-popup-blurb {
   @include h5-style;
   font-family: $domaine;
-  margin: 35px auto;
+  margin: 10px auto 15px auto;
   max-width: columns(10);
   color: white;
   @media screen and (max-width: $mobile_max) {
     max-width: unset;
     padding: 0 32px;
     margin: 48px auto 48px auto;
+  }
+}
+
+#newsletter-popup{
+  .red-input{
+    border: 2px solid $white !important;
+  }
+  .outline-button {
+    border-color: $white !important;
+    color: $white !important;
+    &:hover {
+      color: $toro_red !important;
+      background-color: white !important;
+    }
+
   }
 }
 
