--- a/templates/footer.html
+++ b/templates/footer.html
@@ -23,8 +23,9 @@
  -->
 
 
+ {% include "form.html" %}
 
-    <form action="https://app.e2ma.net/app2/audience/signup/1873742/1887124/?r=signup" id="signup" method="post" name="signup" class="newsletter-capture-form">
+    <!-- <form action="https://app.e2ma.net/app2/audience/signup/1873742/1887124/?r=signup" id="signup" method="post" name="signup" class="newsletter-capture-form">
       <input id="id_prev_member_email" name="prev_member_email" type="hidden">
       <input id="id_source" name="source" type="hidden">
       <input name="prev_member_email" type="hidden" value="">
@@ -39,7 +40,7 @@
       <div class="form-button">
        <input id="form-submit-input" name="Submit" type="submit" value="Submit" class='outline-button'>
       </div>
-     </form>
+     </form> -->
 
 
 
