--- a/templates/boxes/kiosks.html
+++ b/templates/boxes/kiosks.html
@@ -6,7 +6,7 @@
     <h1 class="mobile-kiosk-title">{{current.name}}</h1>
     <div class="page-landing-header">
       <div class="kiosk-icon">
-        <img src="{{current.fields.thumbnail_left.url}}" alt="{{current.fields.thumbnail_left.alt_text}}">
+        <img src="{{current.fields.page_icon.url}}" alt="{{current.fields.page_icon.alt_text}}">
       </div>
       <h1>{{current.name}}</h1>
       <div class='kiosk_title'>
