--- a/assets/css/_kiosks.scss
+++ b/assets/css/_kiosks.scss
@@ -24,7 +24,7 @@
 		  align-items: center;
       justify-content: center;
       border-left:2px solid $toro-red;
-      h2.shrink {
+      h2 {
         border:2px solid $mid_grey;
         height: 100%;
         width: 100%;
