--- a/templates/header.html
+++ b/templates/header.html
@@ -177,6 +177,9 @@
                 <li class="nav-item child">
                   <a href="/bars">Bars</a>
                 </li>
+                <li class="nav-item child">
+                  <a href="/kiosks">Map</a>
+                </li>
               </ul>
             </li>
           {% else %}
@@ -243,6 +246,9 @@
                 </li>
                 <li class="nav-item child">
                   <a href="/bars">Bars</a>
+                </li>
+                <li class="nav-item child">
+                  <a href="/kiosks">Map</a>
                 </li>
               </ul>
             </li>
