--- a/templates/form.html
+++ b/templates/form.html
@@ -58,7 +58,7 @@
             <span class='birthday-label red-input'>¡Birthday!</span>
            <select field_id="1341332" class='red-input' id="id_member_field_birthday_month" name="member_field_birthday_month">
             <option value="0">
-             ---
+             Mes
             </option>
             <option value="1">
              January
@@ -99,7 +99,7 @@
            </select>
            <select field_id="1341332" id="id_member_field_birthday_day" class='red-input' name="member_field_birthday_day">
             <option value="0">
-             ---
+             Dia
             </option>
             <option value="1">
              1
@@ -206,6 +206,6 @@
        </span>
       </div>
       <div class="form-button">
-       <input id="form-submit-input" name="Submit" type="submit" value="Submit" class='outline-button'>
+       <input id="form-submit-input" name="Submit" type="submit" value="¡Submit!" class='outline-button'>
       </div>
      </form>
