--- a/templates/gallery_page.html
+++ b/templates/gallery_page.html
@@ -2,12 +2,16 @@
 <article class='gallery-page'>
   <div class="content-margins">
     <section class="gallery-header">
-      <h1 class="mobile-happenings-title">Gallery</h1>
+      <!-- <h1 class="mobile-happenings-title">Gallery</h1> -->
 
       <div class="page-landing-header">
-        <img src="{{static('img/gallery-images/Left.png')}}" alt="" class='header-icon-left'>
+        <div class="page-header-icon-left">
+          <img src="{{static('img/gallery-images/Left.png')}}" alt="" class='header-icon-left'>
+        </div>
         <h1>Gallery</h1>
-        <img src="{{static('img/gallery-images/Right.png')}}" alt="" class='header-icon-right'>
+        <div class="page-header-icon-right">
+          <img src="{{static('img/gallery-images/Right.png')}}" alt="" class='header-icon-right'>
+        </div>
       </div>
     </section>
 
